--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "type-check": "npm run type-check --workspaces"
   },
   "prettier": "@sanity/prettier-config",
+  "overrides": {
+    "rollup": "4.43.0"
+  },
   "devDependencies": {
     "@sanity/prettier-config": "^2.0.2",
     "npm-run-all2": "^5.0.2",
